File: plugins/nexus-repository-raw/pom.xml